--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -15,6 +15,7 @@
     border: 1px solid #cdcdcd;
     border-radius: 5px;
     padding: 3px;
+    position: relative;
 }
 
 .navbar_search{
@@ -38,6 +39,46 @@
     background-color: #6457f9;
     color: lightgrey;
     cursor: pointer;
+}
+.click_anywhere{
+    background-color: grey;
+    position: absolute;
+    opacity: 0%;
+    width: 100vw;
+    height: 100vmax;
+    z-index: 888
+}
+
+.search_result {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    margin-top: 10px;
+    border: 1px solid #cdcdcd;
+    border-radius: 5px;
+    background-color: white;
+    z-index: 999;
+    list-style: none;
+}
+
+.search_suggestion_link{
+    display: flex;
+}
+
+.active_suggestion {
+    background-color: #e3e3e3;    
+}
+
+.search_suggestion_link > a{
+    width: 100%;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.search_suggestion_link:hover{
+    background-color: #e3e3e3;
 }
 
 .navbar_links {
