--- a/src/components/Authentication/LoginPage.css
+++ b/src/components/Authentication/LoginPage.css
@@ -45,6 +45,16 @@
     height: 40px;
     width: 100%;
     margin: 25px 0 10px;
+    
+}
+
+.search_button{
+    color: white;
+    transition: all 0.1s ease-in-out;
+}
+
+.search_button:hover{
+    transform: scale(0.95);
 }
 
 .form_error{
